[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
  "storage-proofs-update",
  "fil-proofs-bin",
]

[patch.crates-io]
bellpepper = { git = "https://github.com/vmx/bellpepper", branch = "less-mem" }
bellpepper-core = { git = "https://github.com/vmx/bellpepper", branch = "less-mem" }
bellperson = { git = "https://github.com/vmx/bellman", branch = "less-mem" }
